/*
 * Licensed to the Fintech Open Source Foundation (FINOS) under one or
 * more contributor license agreements. See the NOTICE file distributed
 * with this work for additional information regarding copyright ownership.
 * FINOS licenses this file to you under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with the
 * License. You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package tracdap.api.internal;

option java_package = "org.finos.tracdap.api.internal";
option java_outer_classname = "InternalMetadataProto";
option java_multiple_files = true;

import "tracdap/metadata/object_id.proto";
import "tracdap/metadata/tag.proto";
import "tracdap/metadata/config.proto";
import "tracdap/api/metadata.proto";
import "tracdap/api/config.proto";

/**
 * Internal API for reading, writing and searching objects in the TRAC metadata store.
 *
 * This API is only available to other components of the TRAC platform using gRPC,
 * it is not exposed to clients via the gateway and REST mappings are not provided.
 *
 * Most of the calls in this interface are identical to their public equivalents.
 * Extra calls are available for pre-allocating objects, a facility which is not
 * available to clients of the platform. Restrictions on the creation of certain
 * object types and manipulation of controlled tag attributes are lifted.
 *
 * @see TracMetadataApi
 */
service InternalMetadataApi {

  /**
   * Create a new object in the TRAC metadata store.
   *
   * This call behaves identically to the equivalent public API call, without the
   * restriction on which types of object can be saved.
   *
   * @see TracMetadataApi.createObject()
   */
  rpc createObject (MetadataWriteRequest) returns (metadata.TagHeader);

  /**
   * Update an existing object in the TRAC metadata store.
   *
   * This call behaves identically to the equivalent public API call, however it
   * can be used with any type of object that supports versioning (currently DATA
   * and CUSTOM).
   *
   * @see TracMetadataApi.updateObject()
   */
  rpc updateObject (MetadataWriteRequest) returns (metadata.TagHeader);

  /**
   * Update the tag for an existing object in the TRAC metadata store.
   *
   * This call behaves identically to the equivalent public API call.
   *
   * @see TracMetadataApi.updateTag()
   */
  rpc updateTag (MetadataWriteRequest) returns (metadata.TagHeader);

  /**
   * Preallocate an object ID for an object that will be created later.
   *
   * This call is for use by TRAC components that need to reserve an ID before
   * it is used, particularly if the object ID must be included in the definition
   * of an object that has not been created yet. When creating an ID the tenant
   * and object type must be specified, the object that is eventually saved must
   * match these two conditions. Orphan IDs are expected - if a component request
   * an ID and encounters an error before that ID is used, the orphan ID is just
   * ignored.
   */
  rpc preallocateId (MetadataWriteRequest) returns (metadata.TagHeader);

  /**
   * Create an object using an ID that was previously preallocated.
   *
   * This call behaves essentially the same as createObject(), with all the
   * same validation. The only difference is that the new definition must be
   * supplied with an object header, including the object ID returned from a
   * prior call to preallocateId().
   *
   * Error conditions include all the error conditions for createObject().
   * Using a preallocated ID twice, attempting to save to an unknown ID or the
   * ID of another object that already exists are also errors.
   */
  rpc createPreallocatedObject (MetadataWriteRequest) returns (metadata.TagHeader);

  /**
   * Perform a batch of write operations on the TRAC metadata store.
   *
   * This call behaves similarly to the equivalent public API call. However,
   * the createObject, updateObject and updateTag request types take their
   * semantics from the internal API instead of the public one. It is also
   * possible to include preallocateId and createPreallocatedObject in the
   * batch request.
   *
   * @see TracMetadataApi.writeBatch()
   */
  rpc writeBatch (MetadataWriteBatchRequest) returns (MetadataWriteBatchResponse);

  /**
   * Read a single object from the TRAC metadata store using a tag selector.
   *
   * This call behaves identically to the equivalent public API call.
   *
   * @see TracMetadataApi.readObject()
   */
  rpc readObject(MetadataReadRequest) returns (metadata.Tag);

  /**
   * Read multiple objects from the TRAC metadata store using tag selectors.
   *
   * This call behaves identically to the equivalent public API call.
   *
   * @see TracMetadataApi.readBatch()
   */
  rpc readBatch(MetadataBatchRequest) returns (MetadataBatchResponse);

  /**
   * Perform a search against the TRAC metadata store.
   *
   * This call behaves identically to the equivalent public API call.
   *
   * @see TracMetadataApi.search()
   */
  rpc search(MetadataSearchRequest) returns (MetadataSearchResponse);

  // Config API is duplicated from the admin service
  // Admin service makes these internal calls directly to update config metadata

  /// Create a new config entry and store the associated object definition
  rpc createConfigObject(ConfigWriteRequest) returns (ConfigWriteResponse);

  /// Update an existing config entry and store the associated object definition
  rpc updateConfigObject(ConfigWriteRequest) returns (ConfigWriteResponse);

  /// Delete an existing config entry
  rpc deleteConfigObject(ConfigWriteRequest) returns (ConfigWriteResponse);

  /// Read an individual config entry
  rpc readConfigEntry (ConfigReadRequest) returns (ConfigReadResponse);

  /// Read a batch of config entries
  rpc readConfigBatch (ConfigReadBatchRequest) returns (ConfigReadBatchResponse);

  /// List available config entries, with optional filter criteria
  rpc listConfigEntries (ConfigListRequest) returns (ConfigListResponse);
};
